# yanl

./: CMakeLists.txt  README.md  main.cpp  yanl.h
.github/workflows/: cmake.yml
src/: CMakeLists.txt  Matrix.h  TODO.md  Vector.h  integrate.h  linear_algebra.h  main.cpp  matrix.h  optimize.h  yanl.h
src/yanl/: Vector.h  integrate.h  linear_algebra.h  main.cpp  matrix.h  optimize.h  yanl.h
test/: CMakeLists.txt  main.cpp
